<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".SurveyActivities.generalInterestQuestions.GeneralInterestQuestion1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="52dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/generalInterest_question1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="26sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/generalInterest_question1_yourAnswer_headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_answer"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/generalInterest_question1_radioGroupCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp">

                <RadioGroup
                    android:id="@+id/generalInterest_question1_radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/generalInterest_question1_yourChoice1_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/generalInterest_question1_yourChoice2_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/generalInterest_question1_yourChoice3_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/generalInterest_question1_yourChoice4_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/generalInterest_question1_yourChoice5_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/generalInterest_question1_yourChoice6_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/generalInterest_question1_yourChoice7_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/generalInterest_question1_acceptedAnswer_headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/accepted_answer"
                android:textSize="16sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/generalInterest_question1_checkboxesCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/generalInterest_question1_acceptedChoice1_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/generalInterest_question1_acceptedChoice2_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/generalInterest_question1_acceptedChoice3_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/generalInterest_question1_acceptedChoice4_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/generalInterest_question1_acceptedChoice5_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/generalInterest_question1_acceptedChoice6_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/generalInterest_question1_acceptedChoice7_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <EditText
                android:id="@+id/explainAnswer_gI1_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/optional" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/questionPrivacy_gI1_toggleSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_privately"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_privately_text"
                        android:textSize="14sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/save_gI_Question1_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/saveAnswer_text"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/skip_gI_Question1_button"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/skip_gI_Question1_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/skipQuestion_text"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/save_gI_Question1_button" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>